// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartLegend Component should handle legend elements: element 1`] = `
<div
  className="curiosity-chartarea__legend"
>
  <div
    chart={
      Object {
        "hide": [Function],
        "isToggled": [Function],
        "revert": [Function],
        "toggle": [Function],
      }
    }
    datum={
      Object {
        "dataSets": Array [
          Object {
            "data": Array [
              Object {
                "x": 1,
                "xAxisLabel": "1 x axis label",
                "y": 1,
              },
              Object {
                "x": 2,
                "xAxisLabel": "2 x axis label",
                "y": 2,
              },
            ],
            "id": "loremGraph",
          },
        ],
      }
    }
  >
    lorem ipsum
  </div>
</div>
`;

exports[`ChartLegend Component should pass legend props: passed props 1`] = `
Array [
  Array [
    Object {
      "chart": Object {
        "hide": [Function],
        "isToggled": [Function],
        "revert": [Function],
        "toggle": [Function],
      },
      "datum": Object {
        "dataSets": Array [
          Object {
            "data": Array [
              Object {
                "x": 1,
                "xAxisLabel": "1 x axis label",
                "y": 1,
              },
              Object {
                "x": 2,
                "xAxisLabel": "2 x axis label",
                "y": 2,
              },
            ],
            "fill": "#ipsum",
            "id": "loremGraph",
            "isStacked": true,
            "stroke": "#lorem",
            "strokeWidth": 2,
          },
          Object {
            "data": Array [
              Object {
                "x": 1,
                "xAxisLabel": "1 x axis label",
                "y": 1,
              },
              Object {
                "x": 2,
                "xAxisLabel": "2 x axis label",
                "y": 2,
              },
            ],
            "fill": "#ipsum",
            "id": "ipsumGraph",
            "isThreshold": true,
            "stroke": "#lorem",
            "strokeDasharray": "4,3",
            "strokeWidth": 3,
          },
        ],
      },
    },
  ],
]
`;

exports[`ChartLegend Component should render a basic component: basic 1`] = `null`;
